cluster/apps/paperless-ng/paperless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
  labels:
    app: paperless
spec:
  selector:
    app: paperless
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: http
